[gd_scene load_steps=9 format=3 uid="uid://bq5v4npmmltgx"]

[ext_resource type="Script" uid="uid://cwlk84px0jcu7" path="res://scripts/game/drum_wheel.gd" id="1_sul5r"]
[ext_resource type="Script" uid="uid://b67jgv8j4xtj8" path="res://scripts/game/hit_zone_visual.gd" id="2_7h61r"]
[ext_resource type="PackedScene" uid="uid://cqxykiuk7i18o" path="res://scenes/game/arrow.tscn" id="2_kelw5"]
[ext_resource type="Script" uid="uid://bwme5j4d5mudu" path="res://scripts/ui/hud.gd" id="3_0sr1o"]
[ext_resource type="PackedScene" path="res://scenes/ui/pattern_grid.tscn" id="4_pattern_grid"]
[ext_resource type="AudioStream" uid="uid://do5ook2v5rkeu" path="res://assets/audio/drums/kick/kick2.wav" id="5_bdhmt"]
[ext_resource type="AudioStream" uid="uid://c25vqpklfjxiq" path="res://assets/audio/drums/snare/snare.wav" id="6_87uf6"]
[ext_resource type="AudioStream" uid="uid://jy14x4p0iqid" path="res://assets/audio/drums/hithat/hihat.wav" id="7_2a8rs"]

[node name="Game" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="Grid" type="Sprite2D" parent="Background"]

[node name="DrumWheel" type="Node2D" parent="."]
position = Vector2(576, 324)
script = ExtResource("1_sul5r")
arrow_scene = ExtResource("2_kelw5")

[node name="HitZone" type="Node2D" parent="DrumWheel"]

[node name="HitZoneVisual" type="Sprite2D" parent="DrumWheel/HitZone"]
script = ExtResource("2_7h61r")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_0sr1o")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BeatIndicator" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 32
text = "BEAT"

[node name="ScoreLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 20
text = "Score: 0
Combo: 0"

[node name="PatternGridContainer" parent="UI/HUD" instance=ExtResource("4_pattern_grid")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 143.0
offset_right = -20.0
offset_bottom = 263.0
grow_horizontal = 0

[node name="PositionLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -396.0
offset_top = 287.0
offset_right = -16.0
offset_bottom = 317.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Bar 1, Beat 1"
horizontal_alignment = 1

[node name="LegendLabel" type="RichTextLabel" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 23.0
offset_right = -20.0
offset_bottom = 131.0
grow_horizontal = 0
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[b]Arrow Colors:[/b]
[color=#ff5555]Red[/color] = Kick
[color=#55ff55]Green[/color] = Snare  
[color=#aaaaff]Blue[/color] = Hi-hat"

[node name="InstructionsLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -80.0
theme_override_font_sizes/font_size = 24
text = "Hit SPACE when arrows enter the cyan zone!"
horizontal_alignment = 1

[node name="ControlsLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "[SPACE] Hit Drum | [ESC] Pause | [R] Restart"
horizontal_alignment = 1

[node name="AudioPlayers" type="Node" parent="."]

[node name="KickPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("5_bdhmt")

[node name="SnarePlayer" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("6_87uf6")

[node name="HiHatPlayer" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("7_2a8rs")
